.k8s/deploy-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-k8s-app1
  labels:
    app: go-k8s-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-k8s-app1
  template:
    metadata:
      labels:
        app: go-k8s-app1
    spec:
      containers:
        - name: go-k8s-app1
          image: go-k8s-app1:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
