.k8s/service-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-k8s-app1
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3000
  selector:
    app: go-k8s-app1
  type: ClusterIP
