.k8s/service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-k8s-app2
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3001
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3001
  selector:
    app: go-k8s-app2
  type: ClusterIP
