.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-k8s-app1
                port:
                  number: 3000
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: go-k8s-app2
                port:
                  number: 3001
